--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -9,22 +9,23 @@
   <body>
     <div class="container">
 
+        Bootstrap Grid System
 
         <div class="row">
           <div class="col red">col</div>
           <div class="col red">col</div>
           <div class="col red">col</div>
-        </div>    
+        </div>
         <div class="row">
           <div class="col-sm red">col-sm</div>
           <div class="col-sm red">col-sm</div>
           <div class="col-sm red">col-sm</div>
-        </div>    
+        </div>
         <div class="row">
           <div class="col-md red">col-md</div>
           <div class="col-md red">col-md</div>
           <div class="col-md red">col-md</div>
-        </div>             
+        </div>
         <div class="row">
           <div class="col-lg red">col-lg</div>
           <div class="col-lg red">col-lg</div>
@@ -38,7 +39,7 @@
         <div class="row">
           <div class="col-8 red">col-8</div>
           <div class="col-4 red">col-4</div>
-        </div>            
+        </div>
         <div class="row">
             <div class="col">
             col-sm breakpoint: 576px<br>
@@ -47,8 +48,8 @@
             col-xl breakpoint: 1200px
             </div>
         </div>
-  
-  
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
