--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
 
-        Bootstrap Grid System
+        Bootstrap Grid System with Breakpoints
 
         <div class="row">
           <div class="col red">col</div>
