--- a/jsdemo/index.html
+++ b/jsdemo/index.html
@@ -9,5 +9,5 @@
 		<h1>Javascript Demo</h1>
 	</div>
 </body>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="demo.js"></script>
 </html>
