--- a/dom-demo/index.html
+++ b/dom-demo/index.html
@@ -11,14 +11,14 @@
 	<div id="content" class="box">
 		This is some content with a gray background.
 		<div id="inner-content">
-			<div id-"more-inner-content">
-				
+			<div id="more-inner-content">
+
 			</div>
 		</div>
 	</div>
 	<div id="more-content" class="box">
 		This is some more content with a gray background.
-	</div>	
+	</div>
 	<div id="list-content" class="box">
 		This is an unordered list.
 		<ul id="theList"><li>Item One</li><li>Item Two</li><li>Item Three</li></ul>
@@ -29,7 +29,7 @@
 		</a>
 		<a id="btnYellow" class="btn">
 			Yellow Background
-		</a>	
+		</a>
 
 <script type="text/javascript" src="script.js"></script>
 </body>
